--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.16.2",
+    "foreman": "2.0.0",
     "ws": "^3.3.2"
   },
   "engines": {
@@ -20,10 +21,11 @@
     "webpack": "^2.1.0-beta.22"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nf start",
+    "server": "node server.js",
     "l_cp": "mkdir public\\css && cp src\\index.html public\\index.html && cp src\\css\\styles.css public\\css\\styles.css",
     "w_cp": "mkdir public\\css && copy src\\index.html public\\index.html && copy src\\css\\styles.css public\\css\\styles.css",
-    "dev": "webpack && npm run start",
+    "dev": "webpack && npm run server",
     "watch": "webpack --watch"
   },
   "author": "Rene Rautenbach",
