--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "l_cp": "mkdir public\\css && cp src\\index.html public\\index.html && cp src\\css\\styles.css public\\css\\styles.css",
     "w_cp": "mkdir public\\css && copy src\\index.html public\\index.html && copy src\\css\\styles.css public\\css\\styles.css",
     "dev": "webpack && npm run server",
-    "watch": "webpack --watch", 
-    "heroku-prebuild" : "--only=dev "
+    "watch": "webpack --watch" 
   },
   "author": "Rene Rautenbach",
   "license": "ISC"
