--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "foreman": "2.0.0",
-    "ws": "^3.3.2"
+    "ws": "^3.3.2",
+    "webpack": "^2.1.0-beta.22"
   },
   "engines": {
     "npm": "5.2.0",
@@ -17,8 +18,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "file-loader": "^1.1.5",
-    "webpack": "^2.1.0-beta.22"
+    "file-loader": "^1.1.5"
   },
   "scripts": {
     "start": "nf start",
