--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "foreman": "2.0.0",
-    "ws": "^3.3.2",
-    "webpack": "^2.1.0-beta.22"
+    "ws": "^3.3.2"
   },
   "engines": {
     "npm": "5.2.0",
@@ -18,7 +17,11 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "file-loader": "^1.1.5"
+    "file-loader": "^1.1.5",
+    "webpack": "^2.1.0-beta.22",
+    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+    "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
+   
   },
   "scripts": {
     "start": "nf start",
