--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "file-loader": "^1.1.5",
-    "webpack": "^2.1.0-beta.22",
-    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
-    "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
-   
+    "webpack": "^2.1.0-beta.22"
   },
   "scripts": {
     "start": "nf start",
@@ -29,7 +26,10 @@
     "l_cp": "mkdir public\\css && cp src\\index.html public\\index.html && cp src\\css\\styles.css public\\css\\styles.css",
     "w_cp": "mkdir public\\css && copy src\\index.html public\\index.html && copy src\\css\\styles.css public\\css\\styles.css",
     "dev": "webpack && npm run server",
-    "watch": "webpack --watch" 
+    "watch": "webpack --watch" ,
+    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+    "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
+   
   },
   "author": "Rene Rautenbach",
   "license": "ISC"
